--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Fuse Angular - Angular Template and Starter Kit</title>
+        <title>Lucas Sanders website software</title>
         <meta charset="utf-8">
         <meta
             name="description"
-            content="Admin Template and Starter Kit with Angular, Angular Material Components and TailwindCSS">
+            content="Lucas Sanders website software">
         <meta
             name="keywords"
             content="Fuse,HTML,CSS,Angular,Angular 13,Angular 14,Angular 15,Material,Angular Components,Tailwind,Tailwind CSS,TailwindCSS,Admin Template,Admin Starter Kit">
@@ -49,13 +49,10 @@
 
     </head>
 
-    <body>
+    <body class="splash-screen-hidden">
 
         <!-- Splash screen -->
         <fuse-splash-screen>
-            <img
-                src="assets/images/logo/logo.svg"
-                alt="Fuse logo">
             <div class="spinner">
                 <div class="bounce1"></div>
                 <div class="bounce2"></div>
