Complete the checkers game

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
 
         <!-- Splash screen -->
         <fuse-splash-screen>
-            <div class="spinner">
+            <div class="container">
                 <div class="bounce1"></div>
                 <div class="bounce2"></div>
                 <div class="bounce3"></div>
